src/style.scss
$dark-gray:#2E3440;
$medium-gray: #3B4252;
$light-gray: #434C5E;
$bright-gray: #4C566A;
$white-text:#ECEFF4;
$damp: #D8DEE9;
$blue: #5E81AC;
$red: #BF616A;
$orange: #D08770;
$yellow: #EBCB8B;
$green: #A3BE8C;
$pink: #B48EAD;

@font-face {
    font-family: "iosevka";
    src: url("public/fonts/iosevka-regular.woff2");
}

@mixin theme {
    background-color: $dark-gray;
    color: $white-text;
    font-family: "iosevka";
}

@mixin top-row {
    height: 2.5em;
}

body {
    @include theme;
}

main {
    display: flex;
    height: 100vh;
}

button {
    @include theme;
    cursor: pointer;
    border: none;
}

.panel {
    // margin-top: vh;
    // color: blue;
}

#view {
    width: 80vw;
}

#sidenav {
    width: 20vw;
}

#name {
    @include top-row;
    display: flex;
    align-items: center;
}

#explorer {
    margin-top: 2vh;
    button {
        width: 100%;
        text-align: left;
    }
    button:hover {
        background-color: $medium-gray;
    }
    button.active {
        background-color: $blue;
    }
}

.folder-contents {
    transition: max-height 0.2s ease-in-out;
    * {
        padding-left: 1em;
    }
}

#tabs {
    @include top-row;
    overflow-x: auto;
    button {
        // min-width: 20%;
        height: 100%;
        padding-left: 1em;
        padding-right: 1em;
    }
    button:hover {
        background-color: $medium-gray;
    }
    button.active {
        background-color: $light-gray;
    }
}

.close-button {
    color: $damp;
    margin-left: 4em;
}

.close-button:hover {
    color:$red
}

#editor {
    padding: 2em;
    height: 100%;
}

#editor.active {
    background-color: $light-gray;
}

